crates/native/tests/snapshots/parser_tests__nested_fragment_spreads.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"query { user { ...UserWithPosts } }\n        fragment UserWithPosts on User { id ...UserBasic }\n        fragment UserBasic on User { name email }\"#)"
---
Document {
    source: Source {
        code: "query { user { ...UserWithPosts } }\n        fragment UserWithPosts on User { id ...UserBasic }\n        fragment UserBasic on User { name email }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 35,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 33,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "user",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            FragmentSpread(
                                                FragmentSpread {
                                                    span: Span {
                                                        start: 15,
                                                        end: 33,
                                                    },
                                                    fragment_name: FragmentName(
                                                        Name(
                                                            "UserWithPosts",
                                                        ),
                                                    ),
                                                    directives: [],
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 44,
                        end: 94,
                    },
                    name: FragmentName(
                        Name(
                            "UserWithPosts",
                        ),
                    ),
                    type_condition: TypeName(
                        Name(
                            "User",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 77,
                                        end: 83,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            FragmentSpread(
                                FragmentSpread {
                                    span: Span {
                                        start: 80,
                                        end: 94,
                                    },
                                    fragment_name: FragmentName(
                                        Name(
                                            "UserBasic",
                                        ),
                                    ),
                                    directives: [],
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 103,
                        end: 144,
                    },
                    name: FragmentName(
                        Name(
                            "UserBasic",
                        ),
                    ),
                    type_condition: TypeName(
                        Name(
                            "User",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 132,
                                        end: 142,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "name",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 137,
                                        end: 144,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "email",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
